@@ -2,6 +2,7 @@
 CODECFLAGS - Add support for Atmos and DTS-X flags based on filename
 DIALOGVIDEOINFO - Add tags and set information
 PVRGUIDE - Add scrollbar in mouse mode
+VIDEOINFO - Add option to disable trailer preview
 
 [B]0.9.30[/B]
 WIDGETS - Fix for square widgets
